Feito uma função básica de somar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="script.js"></script>
+    <title>Função de somar</title>
 </head>
 <body>
-    
+    <input type="number" id="sum1">
+    <input type="number" id="sum2">
+    <button onclick="Soma()">Clique para somar</button>
+    <p id="saida"></p>
 </body>
 </html>
