Arrumado nome da função a ser chamada

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <input type="number" id="sum1">
     <input type="number" id="sum2">
-    <button onclick="Soma()">Clique para somar</button>
+    <button onclick="Somar()">Clique para somar</button>
     <p id="saida"></p>
 </body>
 </html>
